rmved fixed nav on mobile

--- a/components/navbar/navbar.module.css
+++ b/components/navbar/navbar.module.css
@@ -4,11 +4,12 @@
     align-items: center;
     padding: .8rem 1rem .2rem 1rem;
 
-    position: fixed;
-    top: 0;
+    /* position: fixed;
+    top: 0; */
     width: 100%;
     z-index: 200;
-
+    box-shadow: 0px 6px 10px rgba(197, 201, 248, 0.05),
+    0px 48px 80px rgba(0, 0, 0, 0.025);
     background-color: rgba(255, 255, 255, 0.178);
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
@@ -114,6 +115,8 @@
 
 @media screen and (min-width: 1050px){
     .gmc__navbar {
+         position: fixed;
+         top: 0;
         padding: .5rem 6rem;
     }
      .gmc__navbar_hamburger {
